049_rot_matrix/grade.txt
Grading at 10/02/2022:05:02:12.120822
For commit ID f0ad165f41c150226d7614fc26e7a506a03c3431
Grading at Sun Oct  2 01:02:12 AM EDT 2022
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘rotate_m’:
rotateMatrix.c:10:10: error: ‘fgets’ writing 12 bytes into a region of size 11 overflows the destination [-Werror=stringop-overflow=]
   10 |   while (fgets(line, 12, f) != NULL) {
      |          ^~~~~~~~~~~~~~~~~~
rotateMatrix.c:8:8: note: destination object ‘line’ of size 11
    8 |   char line[11];
      |        ^~~~
In file included from rotateMatrix.c:1:
/usr/include/stdio.h:592:14: note: in a call to function ‘fgets’ declared with attribute ‘access (write_only, 1, 2)’
  592 | extern char *fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      |              ^~~~~
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
